# vbnigmm

./: README.md  README.rst  example.ipynb  pyproject.toml
.github/workflows/: upload.yml
src/vbnigmm/: __init__.py  check.py  fixed_model.py  fixed_posterior.py  gauss_model.py  gauss_posterior.py  logger.py  mainloop.py  math.py  mixturebase.py  nig_model.py  nig_posterior.py
src/vbnigmm/backend/: __init__.py  bessel.py  current.py  gamma.py  search.py  tri.py
src/vbnigmm/backend/tensorflow/: __init__.py  (+3 more)
src/vbnigmm/distributions/: __init__.py  base.py  basedist.py  beta.py  blocknormal.py  cache.py  dirichlet.py  dist.py  dpm.py  gamma.py  gauss.py  invgauss.py  kvln.py  math.py  multinormal.py  normal.py  truncatedgauss.py  wishart.py
src/vbnigmm/linalg/: matrix.py  scalar.py  vector.py
src/vbnigmm/linbase/: matrix.py  scalar.py  vector.py
src/vbnigmm/math/: matrix.py  vector.py
src/vbnigmm/mixture/: base.py  check.py  dpm.py  gauss.py  gmm.py  history.py  mixture.py  nig.py  nig_params.py  nigmm.py  nigmm_params.py  utils.py
tests/: make_data.py  test_dpm.py  test_gamma.py  test_gauss.py  test_gmm.py  test_invgauss.py  test_math.py  test_nig.py  test_nigmm.py  test_wishart.py  true_log_dv_kv.csv  true_log_kv.csv
vbnigmm/backend/: bessel.py  constant.py  current.py  gamma.py  ufunc.py
vbnigmm/backend/tensorflow/: __init__.py  bessel.py  keras.py  ops.py
vbnigmm/distributions/: base.py  dirichlet.py  dist.py  gamma.py  gauss.py  invgauss.py  wishart.py
vbnigmm/linalg/: base.py  matrix.py  scalar.py  vector.py
vbnigmm/math/: base.py  bessel.py  constant.py  matrix.py  ops.py  scalar.py  search.py  special.py  vector.py  wrap.py
vbnigmm/mixture/: check.py  dpm.py  gauss.py  history.py  mixture.py  nig.py  nig_params.py  utils.py
