[tool.poetry]
name = "vbnigmm"
version = "2.3.1"
description = "Variational Bayes algorithm for normal inverse Gaussian mixture models"
license = "GPL-3.0-only"
authors = ["TAKEKAWA Takashi <takekawa@tk2lab.org>"]
readme = 'README.rst'
repository = "https://github.com/tk2lab/vbnigmm"
keywords = ["clustering"]

[tool.poetry.dependencies]
python = "^3.7 || ^3.8 || ^3.9"
tensorflow = "^2.4"
numpy = "^1.19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
